--- a/src/app/components/weather-outfit-suggestion/weather-outfit-suggestion.component.html
+++ b/src/app/components/weather-outfit-suggestion/weather-outfit-suggestion.component.html
@@ -1,1 +1,4 @@
-<p>weather-outfit-suggestion works!</p>
+<div class="outfit-card" *ngIf="weather">
+  <h4>Outfit Recommendations</h4>
+  <p>{{ recommendation }}</p>
+</div>
