--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
  .app-container {
-     padding: 30px;
-     max-width: 800px;
+     max-width: 700px;
      margin: auto;
+     padding: 20px;
+     font-family: 'Segoe UI', sans-serif;
  }
