--- a/src/app/components/weather-details/weather-details.component.html
+++ b/src/app/components/weather-details/weather-details.component.html
@@ -1,7 +1,16 @@
-<div class="weather-card">
-  <h3> Weather in {{ weather.name }}</h3>
-  <p> Temperature: {{ weather.main.temp }} °C</p>
-  <p> Condition: {{ weather.weather[0].main }}</p>
-  <p> Humidity: {{ weather.main.humidity }}%</p>
-  <p> Wind Speed: {{ weather.wind.speed }} m/s</p>
+<div class="weather-card" *ngIf="weather">
+ <h2>{{ weather.name }}, {{ weather.sys?.country }}</h2>
+  <div class="main">
+    <div class="temp">
+      <h1>{{ weather.main.temp }}°C</h1>
+      <p>{{ weather.weather[0].description | titlecase }}</p>
+    </div>
+  </div>
+  <div class="details">
+    <div>Humidity: {{ weather.main.humidity }}%</div>
+    <div>Wind: {{ weather.wind.speed }} m/s</div>
+    <div>Max: {{ weather.main.temp_max }}°C</div>
+    <div>Min: {{ weather.main.temp_min }}°C</div>
+    <div>Feels like: {{ weather.main.feels_like }}°C</div>
+  </div>
 </div>
